factored play button handler, fixed api loading, fixed svg appearance on firefox

--- a/assets/styles/components/_player.scss
+++ b/assets/styles/components/_player.scss
@@ -32,9 +32,6 @@
             background-color: $brand-primary;
             border: none;
             fill: $brand-secondary;
-            display: flex;
-            align-items: center;
-            justify-content: center;
             flex: 1;
             height: 50px;
             @media screen and (min-width: 480px) {
